@startuml
abstract class br.edu.ifrn.conta.domain.Conta {
 +descricao
}
class br.edu.ifrn.conta.domain.Categoria {
 +descricao
}
class br.edu.ifrn.conta.domain.ContaCredito
class br.edu.ifrn.conta.domain.ContaDebito
class br.edu.ifrn.conta.domain.ContaPatrimonio
class br.edu.ifrn.conta.domain.Dono {
 +descricao
}
class br.edu.ifrn.conta.domain.Lancamento  {
 +valor
 +data
 +descricao
}
class br.edu.ifrn.conta.domain.ValorInicialDoDonoNaContaPatrimonio {
 +valorInicial
}
br.edu.ifrn.conta.domain.Categoria "1" *-- br.edu.ifrn.conta.domain.Conta : esta em uma
br.edu.ifrn.conta.domain.Dono "1" *-- br.edu.ifrn.conta.domain.Lancamento : pertence a um
br.edu.ifrn.conta.domain.Conta "1" *-- br.edu.ifrn.conta.domain.Lancamento : conta entrada
br.edu.ifrn.conta.domain.Conta "1" *-- br.edu.ifrn.conta.domain.Lancamento : conta saida
br.edu.ifrn.conta.domain.Dono "1" *-- br.edu.ifrn.conta.domain.ValorInicialDoDonoNaContaPatrimonio : pertence a um
br.edu.ifrn.conta.domain.ContaPatrimonio "1" *-- br.edu.ifrn.conta.domain.ValorInicialDoDonoNaContaPatrimonio : e de uma
br.edu.ifrn.conta.domain.ContaCredito --|> br.edu.ifrn.conta.domain.Conta
br.edu.ifrn.conta.domain.ContaDebito --|> br.edu.ifrn.conta.domain.Conta
br.edu.ifrn.conta.domain.ContaPatrimonio --|> br.edu.ifrn.conta.domain.Conta
@enduml